# invoicer-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
invoicer_cli/: __main__.py  cli.py
invoicer_cli/config/: settings.py
src/: cli.py
src/config/: settings.py
src/invoicer_cli/: __main__.py  cli.py
src/invoicer_cli/config/: settings.py
src/invoicer_cli/domain/: invoice.py  template.py
src/invoicer_cli/services/: extractor.py  pdf_reader.py
src/invoicer_cli/templates/: pl_invoice.json
src/invoicer_cli/utils/: converters.py  file_utils.py
