[project]
name = "invoicer-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "invoice2data (>=0.4.5,<0.5.0)",
    "ocrmypdf (>=16.10.2,<17.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "typer (>=0.16.0,<0.17.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "rich (>=14.0.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
mypy = "^1.16.1"
ruff = "^0.12.2"
